--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
 
     <!-- Baris 3 -->
     <div class="row">
-      <div class="team-card"><img src="asset/13.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/13.jpg" alt="Anggota" />
         <div class="info"><h3>Adamizar</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/14.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/14.jpg" alt="Anggota" />
         <div class="info"><h3>Naabil</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/16.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/16.jpg" alt="Anggota" />
         <div class="info"><h3>Reddy</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/17.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/17.jpg" alt="Anggota" />
         <div class="info"><h3>Hanif</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/18.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/18.jpg" alt="Anggota" />
         <div class="info"><h3>Calvin</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/21.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/21.jpg" alt="Anggota" />
         <div class="info"><h3>Nabil</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/12.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/12.jpg" alt="Anggota" />
         <div class="info"><h3>Ammar Zaki</h3><p>Anggota</p></div></div>
     </div>
   </div>
@@ -93,14 +93,14 @@
 
   <div class="org-structure">
     <div class="row">
-      <div class="team-card"><img src="asset/1.jng" alt="Ketua" /><div class="info"><h3>Veza</h3><p>Ketua</p></div></div>
-      <div class="team-card"><img src="asset/7.jng" alt="Wakil Ketua" /><div class="info"><h3>Syahid</h3><p>Wakil Ketua</p></div></div>
+      <div class="team-card"><img src="asset/1.jpg" alt="Ketua" /><div class="info"><h3>Veza</h3><p>Ketua</p></div></div>
+      <div class="team-card"><img src="asset/7.jpg" alt="Wakil Ketua" /><div class="info"><h3>Syahid</h3><p>Wakil Ketua</p></div></div>
     </div>
 
     <div class="row">
-      <div class="team-card"><img src="asset/3.jng" alt="Bendahara" /><div class="info"><h3>Fadhlan</h3><p>Bendahara</p></div></div>
-      <div class="team-card"><img src="asset/9.jng" alt="Sekretaris" /><div class="info"><h3>Fadly</h3><p>Sekretaris</p></div></div>
-      <div class="team-card"><img src="asset/22.jng" alt="Anggota" /><div class="info"><h3>Taufik</h3><p>Anggota</p></div></div>
+      <div class="team-card"><img src="asset/3.jpg" alt="Bendahara" /><div class="info"><h3>Fadhlan</h3><p>Bendahara</p></div></div>
+      <div class="team-card"><img src="asset/9.jpg" alt="Sekretaris" /><div class="info"><h3>Fadly</h3><p>Sekretaris</p></div></div>
+      <div class="team-card"><img src="asset/22.jpg" alt="Anggota" /><div class="info"><h3>Taufik</h3><p>Anggota</p></div></div>
       <div class="team-card"><img src="asset/5.jpg" alt="Anggota" /><div class="info"><h3>Ibunmewing</h3><p>Anggota</p></div></div>
     </div>
   </div>
@@ -114,11 +114,11 @@
 
   <div class="org-structure">
     <div class="row">
-      <div class="team-card"><img src="asset/26.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/26.jpg" alt="Anggota" />
         <div class="info"><h3>Surya</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/25.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/25.jpg" alt="Anggota" />
         <div class="info"><h3>Bagas</h3><p>Anggota</p></div></div>
-      <div class="team-card"><img src="asset/24.jng" alt="Anggota" />
+      <div class="team-card"><img src="asset/24.jpg" alt="Anggota" />
         <div class="info"><h3>Bian</h3><p>Anggota</p></div></div>
     </div>
   </div>
